--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Detective and mystery stories'
 - !lcsh 'Gulf Coast (Ala.) -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: "The Young Engineers on the Gulf\r\nOr, The Dread Mystery of the Million Dollar\
   \ Breakwater"
 url: http://www.gutenberg.org/ebooks/14369
